--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ identifier = "compositions"
 url = "/compositions/"
 
 [[menu.main]]
-name = "CV and Academics"
+name = "Academics"
 weight = -105
 identifier = "academics"
 url = "http://michaelhealy.space/academic/"
@@ -46,9 +46,13 @@ url = "/about/"
 dateFormat = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
 subtitle = "Personal blog about adventures in academia, running, and the kitchen"
-logo = "img/runner.png"
-favicon = "img/runner.png"
+logo = "/img/runner.png"
+favicon = "/img/runner.png"
 rss = true
+
+[[Params.bigimg]]
+  src = "/img/cover.jpg"
+  desc = "Lake Bradford"
 
 [Author]
 github = "mjh16"
