--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl             = "http://michaelhealy.space"
+baseurl             = "http://michaelhealy.space/"
 DefaultContentLanguage = "en"
 contentdir          = "content"
 languageCode        = "en-US"
@@ -46,13 +46,13 @@ url = "/about/"
 dateFormat = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
 subtitle = "Personal blog about adventures in academia, running, and the kitchen"
-logo = "/img/runner.png"
-favicon = "/img/runner.png"
+logo = "img/runner.png"
+favicon = "img/runner.png"
 rss = true
 
-[[Params.bigimg]]
-  src = "/img/cover.jpg"
-  desc = "Lake Bradford"
+#[[Params.bigimg]]
+#  src = "img/cover.jpg"
+#  desc = "Lake Bradford"
 
 [Author]
 github = "mjh16"
