--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode        = "en-US"
 theme               = "cocoa"
 author              = "Michael Healy"
 title               = "Michael Healy"
-#disqusshortname     = "cocoaexamplesite" # Comment out to disable Disqus.
+disqusshortname     = "mhspace" # Comment out to disable Disqus.
 #googleAnalytics     = "UA-123-45"
 
 [permalinks]
